--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 blockquote{
-	cite:url(https://en.wikipedia.org/wiki/New_Delhi);
+	cite:"https://en.wikipedia.org/wiki/New_Delhi";
 	max-width:600px;
 	margin: 10px;
 	padding: 15px;
